--- a/Makefile.common
+++ b/Makefile.common
@@ -146,7 +146,10 @@ ifeq ($(WITH_DYNAREC), arm)
 else ifeq ($(WITH_DYNAREC), oldarm)
 	COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="ARMV4LE"
 else ifeq ($(WITH_DYNAREC), x86_64)
-	COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="X86_64" -DC_HAVE_MPROTECT
+	COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="X86_64"
+	ifeq ($(platform), unix)
+		COMMONFLAGS += -DC_HAVE_MPROTECT
+	endif
 else ifeq ($(WITH_DYNAREC), x86)
 	COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="X86"
 else ifeq ($(WITH_DYNAREC), ppc)
