--- a/Makefile.common
+++ b/Makefile.common
@@ -141,6 +141,10 @@ SOURCES_C += $(LIBRETRO_COMM_DIR)/file/retro_dirent.c \
 				 $(LIBRETRO_COMM_DIR)/file/retro_stat.c
 endif
 
+ifneq ($(platform),win)
+
+
+#dynarec options
 ifneq (,$(filter $(platform),unix osx))
 COMMONFLAGS += -DC_HAVE_MPROTECT="1"
 endif
@@ -158,6 +162,9 @@ else ifeq ($(WITH_DYNAREC), ppc)
 else ifeq ($(WITH_DYNAREC), mips)
 	#COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="MIPSEL"
 	#the mips dynarec wont compile but nothing new uses mips anyway(just the old psp)
+endif
+
+
 endif
 
 ifeq ($(WANT_FLUIDSYNTH), 1)
