--- a/Makefile.common
+++ b/Makefile.common
@@ -110,11 +110,12 @@ SOURCES_CXX := \
 	$(CORE_DIR)/libretro/dosbox.cpp \
 	$(CORE_DIR)/libretro/render.cpp \
 	$(CORE_DIR)/libretro/render_scalers.cpp \
-	$(CORE_DIR)/src/midi/midi.cpp \
 	$(CORE_DIR)/libretro/libretro.cpp \
 	$(CORE_DIR)/libretro/dos_gfx.cpp \
 	$(CORE_DIR)/libretro/mapper.cpp \
 	$(CORE_DIR)/libretro/mixer-retro.cpp \
+	$(CORE_DIR)/libretro/nonlibc/snprintf.cpp \
+	$(CORE_DIR)/src/midi/midi.cpp \
 	$(CORE_DIR)/src/midi/munt/Analog.cpp \
 	$(CORE_DIR)/src/midi/munt/BReverbModel.cpp \
 	$(CORE_DIR)/src/midi/munt/File.cpp \
@@ -133,6 +134,7 @@ SOURCES_CXX := \
 	$(CORE_DIR)/src/midi/munt/TVF.cpp \
 	$(CORE_DIR)/src/midi/munt/TVP.cpp \
 	$(CORE_DIR)/src/midi/munt/sha1/sha1.cpp
+
 
 SOURCES_C := $(LIBRETRO_COMM_DIR)/libco/libco.c
 
