--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -76,12 +76,18 @@ else ifneq (,$(findstring ios,$(platform)))
 	ifeq ($(IOSSDK),)
 		IOSSDK := $(shell xcodebuild -version -sdk iphoneos Path)
 	endif
-
+ifeq ($(platform),ios-arm64)
+	CC = cc -arch arm64 -isysroot $(IOSSDK)
+	CXX = c++ -arch arm64 -isysroot $(IOSSDK)
+	# No dynarec for arm64 yet
+	WITH_DYNAREC = 
+else
 	CC = cc -arch armv7 -isysroot $(IOSSDK)
 	CXX = c++ -arch armv7 -isysroot $(IOSSDK)
 	WITH_DYNAREC = arm
+endif
 	COMMONFLAGS += -DIOS
-ifeq ($(platform),ios9)
+ifeq ($(platform),$(filter $(platform),ios9 ios-arm64))
 	CC += -miphoneos-version-min=8.0
 	COMMONFLAGS += -miphoneos-version-min=8.0
 else
