--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ env:
     - CORE=dosbox
     - COMPILER_NAME=gcc CXX=g++-7 CC=gcc-7
   matrix:
+    - PLATFORM=3ds
     - PLATFORM=linux_x64
     - PLATFORM=wiiu
 before_script:
