--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -169,7 +169,7 @@ else ifeq ($(platform), ctr)
 	NEED_BPP := 16
 
 # Nintendo Classics (Hakchi)
-ifeq ($(platform), nintendoc)
+else ifeq ($(platform), nintendoc)
 	TARGET := $(TARGET_NAME)_libretro.so
 	LDFLAGS += -shared -Wl,--version-script=libretro/link.T
     CFLAGS += -marm -mcpu=cortex-a7 -mfpu=neon-vfpv4 -mfloat-abi=hard
