--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -172,7 +172,7 @@ else ifeq ($(platform), ctr)
 else ifeq ($(platform), nintendoc)
 	TARGET := $(TARGET_NAME)_libretro.so
 	LDFLAGS += -shared -Wl,--version-script=libretro/link.T
-    CFLAGS += -marm -mcpu=cortex-a7 -mfpu=neon-vfpv4 -mfloat-abi=hard
+        COMMONFLAGS += -marm -mcpu=cortex-a7 -mfpu=neon-vfpv4 -mfloat-abi=hard
 	fpic = -fPIC
 
 # Wii
