update the core part to the new svn-core

--- a/Makefile.common
+++ b/Makefile.common
@@ -143,10 +143,6 @@ SOURCES_C += $(LIBRETRO_COMM_DIR)/file/retro_dirent.c \
 				 $(LIBRETRO_COMM_DIR)/file/retro_stat.c
 endif
 
-ifneq ($(platform),win)
-
-
-#dynarec options
 ifneq (,$(filter $(platform),unix osx))
 COMMONFLAGS += -DC_HAVE_MPROTECT="1"
 endif
@@ -156,9 +152,11 @@ ifeq ($(WITH_DYNAREC), arm)
 else ifeq ($(WITH_DYNAREC), oldarm)
 	COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="ARMV4LE"
 else ifeq ($(WITH_DYNAREC), x86_64)
-	COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="X86_64"
+	ifeq ($(platform),win)
+		COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="X86_64"
+	endif
 else ifeq ($(WITH_DYNAREC), x86)
-	COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="X86"
+	COMMONFLAGS += -DC_DYNAMIC_X86="1" -DC_TARGETCPU="X86"
 else ifeq ($(WITH_DYNAREC), ppc)
 	COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="POWERPC"
 else ifeq ($(WITH_DYNAREC), mips)
@@ -166,8 +164,6 @@ else ifeq ($(WITH_DYNAREC), mips)
 	#the mips dynarec wont compile but nothing new uses mips anyway(just the old psp)
 endif
 
-
-endif
 
 ifeq ($(WANT_FLUIDSYNTH), 1)
 	COMMONFLAGS += -DC_FLUIDSYNTH
