--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -1,6 +1,7 @@
 DEBUG=0
 GIT_VERSION := " $(shell git rev-parse --short HEAD)"
 
+
 UNAME=$(shell uname -a)
 
 ifeq ($(platform),)
@@ -47,12 +48,10 @@ endif
 ifeq ($(platform), unix)
 	TARGET := $(TARGET_NAME)_libretro.so
 	LDFLAGS += -shared -Wl,--version-script=libretro/link.T
-
 	fpic = -fPIC
 else ifeq ($(platform), osx)
 	TARGET := $(TARGET_NAME)_libretro.dylib
 	LDFLAGS += -dynamiclib
-
 	fpic = -fPIC
 	ifeq ($(arch),ppc)
 		COMMONFLAGS += -DBLARGG_BIG_ENDIAN=1 -D__ppc__
@@ -145,7 +144,7 @@ else ifeq ($(platform), vita)
 	AR = arm-vita-eabi-ar$(EXE_EXT)
 	WITH_DYNAREC = arm
 	COMMONFLAGS += -DVITA
-	COMMONFLAGS += -mthumb -mcpu=cortex-a9 -mfloat-abi=hard -ftree-vectorize  -ffast-math -fsingle-precision-constant -funroll-loops
+	COMMONFLAGS += -mthumb -mcpu=cortex-a9 -mfloat-abi=hard -ftree-vectorize -ffast-math -fsingle-precision-constant -funroll-loops
 	COMMONFLAGS += -mword-relocations
 	COMMONFLAGS += -fno-optimize-sibling-calls
 	STATIC_LINKING = 1
@@ -172,7 +171,7 @@ else ifeq ($(platform), ctr)
 else ifeq ($(platform), nintendoc)
 	TARGET := $(TARGET_NAME)_libretro.so
 	LDFLAGS += -shared -Wl,--version-script=libretro/link.T
-        COMMONFLAGS += -marm -mcpu=cortex-a7 -mfpu=neon-vfpv4 -mfloat-abi=hard
+	COMMONFLAGS += -marm -mcpu=cortex-a7 -mfpu=neon-vfpv4 -mfloat-abi=hard
 	fpic = -fPIC
 
 # Wii
@@ -201,7 +200,7 @@ else ifeq ($(platform), emscripten)
 	COMMONFLAGS += -DEMSCRIPTEN
 
 else
-	CXXFLAGS += -mno-ms-bitfields
+	COMMONFLAGS += -mno-ms-bitfields
 	TARGET := $(TARGET_NAME)_libretro.dll
 	LDFLAGS += -shared -static-libgcc -static-libstdc++ -Wl,--version-script=libretro/link.T -lwinmm
 endif
