--- a/Makefile.common
+++ b/Makefile.common
@@ -149,10 +149,12 @@ endif
 
 ifeq ($(WITH_DYNAREC), arm)
 	COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="ARMV7LE"
+else ifeq ($(WITH_DYNAREC), arm64)
+	COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="ARMV8LE" -DC_UNALIGNED_MEMORY="1"
 else ifeq ($(WITH_DYNAREC), oldarm)
 	COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="ARMV4LE"
 else ifeq ($(WITH_DYNAREC), x86_64)
-	ifeq ($(platform),win)
+	ifneq ($(platform),win)
 		COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="X86_64"
 	endif
 else ifeq ($(WITH_DYNAREC), x86)
@@ -161,7 +163,6 @@ else ifeq ($(WITH_DYNAREC), ppc)
 	COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="POWERPC"
 else ifeq ($(WITH_DYNAREC), mips)
 	#COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="MIPSEL"
-	#the mips dynarec wont compile but nothing new uses mips anyway(just the old psp)
 endif
 
 
