--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -4,7 +4,7 @@ GIT_VERSION := " $(shell git rev-parse --short HEAD)"
 UNAME=$(shell uname -s)
 UNAMEM=$(shell uname -m)
 
-platform = unix
+platform ?= unix
 ifneq ($(findstring MINGW,$(UNAME)),)
 	platform = win
 else ifneq ($(findstring Darwin,$(UNAME)),)
@@ -144,6 +144,15 @@ else ifeq ($(platform), wiiu)
 	WITH_EMBEDDED_SDL = 1
 	STATIC_LINKING = 1
 	WITH_DYNAREC =
+else ifeq ($(platform), libnx)
+	include $(DEVKITPRO)/libnx/switch_rules
+	TARGET := $(TARGET_NAME)_libretro_$(platform).a
+	CFLAGS := -g -O2 -fPIE -I$(LIBNX)/include/ -ffunction-sections -fdata-sections -ftls-model=local-exec -Wl,--allow-multiple-definition -specs=$(LIBNX)/switch.specs
+	CFLAGS += $(INCLUDE) -D__SWITCH__ -DHAVE_LIBNX
+	CXXFLAGS := $(ASFLAGS) $(CFLAGS) -std=gnu++11
+	CFLAGS += -std=gnu11
+	WITH_DYNAREC =
+	STATIC_LINKING = 1
 else ifeq ($(platform), emscripten)
 	TARGET := $(TARGET_NAME)_libretro_$(platform).bc
 	STATIC_LINKING = 1
