--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -101,6 +101,16 @@ else ifneq (,$(findstring ios,$(platform)))
 		CC += -miphoneos-version-min=5.0
 		COMMONFLAGS += -miphoneos-version-min=5.0
 	endif
+else ifeq ($(platform), tvos-arm64)
+	TARGET := $(TARGET_NAME)_libretro_tvos.dylib
+	COMMONFLAGS += -DHAVE_POSIX_MEMALIGN=1 -marm
+	fpic = -fPIC
+	LDFLAGS += -dynamiclib
+	ifeq ($(IOSSDK),)
+		IOSSDK := $(shell xcodebuild -version -sdk appletvos Path)
+	endif
+	COMMONFLAGS += -DIOS
+
 else ifeq ($(platform), psp1)
 	TARGET := $(TARGET_NAME)_libretro_$(platform).a
 	CC = psp-gcc$(EXE_EXT)
