--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -169,6 +169,16 @@ else ifeq ($(platform), wiiu)
 	WITH_EMBEDDED_SDL = 1
 	STATIC_LINKING = 1
 	WITH_DYNAREC =
+else ifneq (,$(filter $(platform), ps3 psl1ght))
+    TARGET := $(TARGET_NAME)_libretro_$(platform).a
+    CC = $(PS3DEV)/ppu/bin/ppu-$(COMMONLV)gcc$(EXE_EXT)
+    CXX = $(PS3DEV)/ppu/bin/ppu-$(COMMONLV)g++$(EXE_EXT)
+    AR = $(PS3DEV)/ppu/bin/ppu-$(COMMONLV)ar$(EXE_EXT)
+    COMMONFLAGS += -D__PS3__ -D__POWERPC__ -D__ppc__ -DMSB_FIRST -DWORDS_BIGENDIAN=1
+    STATIC_LINKING = 1
+    ifeq ($(platform), psl1ght)
+        COMMONFLAGS += -D__PSL1GHT__
+    endif
 else ifeq ($(platform), libnx)
 	include $(DEVKITPRO)/libnx/switch_rules
 	TARGET := $(TARGET_NAME)_libretro_$(platform).a
